agregado de página 404

--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header>
-    	<img src="./img/favicon.svg">
-    	<p>Web personal y experimental</p>
+    	<img src="./img/404.svg">
+    	<p>Disculpa, pero el contenido que buscas no está aquí !</p>
     </header>
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
