ajustes de contenido

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="error">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -15,10 +15,12 @@
     <link rel="stylesheet" type="text/css" href="./css/estilo.css">
 </head>
 <body>
-    <header>
-    	<img src="./img/404.svg">
-    	<p>Disculpa, pero el contenido que buscas no está aquí !</p>
-    </header>
+    <div id="pagina">
+        <header>
+        	<img src="./img/404.svg">
+        	<p>Disculpa, pero el contenido que buscas no está aquí !</p>
+        </header>
+    </div>
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
 </html>
