--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <meta name="HandheldFriendly" content="True"/>
     <meta http-equiv="cleartype" content="on"/>
 
-    <title>CAALMA</title>
+    <title>CAALMA.ar</title>
 
     <link rel="alternate icon" type="image/png" href="./img/favicon.png">
     <link rel="icon" type="image/svg+xml" href="./img/favicon.svg">
 
     <link rel="stylesheet" type="text/css" href="./css/estilo.css">
+
 </head>
 <body>
-    <header>
-    	<img src="./img/favicon.svg">
-    	<p>Web personal y experimental</p>
-    </header>
+    <div id="pagina">
+        <header>
+        	<img src="./img/favicon.svg">
+        	<p>Web personal y experimental.</p>
+        </header>
+        <br>
+        <nav>
+            <h4>Cosas a compartir:</h4>
+            <ul>
+                <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: generador, humorístico, de títulos para emprendimientos.</li>
+                <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
+            </ul>
+        </nav>    
+    </div>
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
 </html>
