--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav>
             <h4>Cosas a compartir:</h4>
             <ul>
-                <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: generador, humorístico, de títulos para emprendimientos.</li>
+                <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: Genera títulos, humorístico, para emprendimientos.</li>
                 <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
             </ul>
         </nav>    
