ajuste de estilo

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
                 <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: Genera títulos, humorístico, para emprendimientos.</li>
                 <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
             </ul>
-        </nav>    
+        </nav>
+
     </div>
+    <footer>
+        <div class="cnt">
+            <p>Esta web está alojada en <a href="https://github.com/caalma/caalma_web">github</a>.</p>
+        </div>
+    </footer>    
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
 </html>
