Agregado de item

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul>
                 <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: Genera títulos, humorístico, para emprendimientos.</li>
                 <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
+                <li><a href="https://caalma.github.io/color_hexadecimal_3_signos/">Colores en Hexadecimal con 3 signos</a>: Tabla de colores.</li>
             </ul>
         </nav>
 
