Agregado de enlace a repositorio.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
     </div>
     <footer>
         <div class="cnt">
-            <p>Esta web está alojada en <a href="https://github.com/caalma/caalma_web">github</a>.</p>
+            <p>Actualizado el <b>2021-06-24 00:38:02</b>.</p>
         </div>
-    </footer>    
+    </footer> 
+
+    <a href="https://github.com/caalma/color_hexadecimal_3_signos" class="github_repositorio" title="Alojado en Github"></a>   
+
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
 </html>
