--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </footer> 
 
-    <a href="https://github.com/caalma/color_hexadecimal_3_signos" class="github_repositorio" title="Alojado en Github"></a>   
+    <a href="https://github.com/caalma/caalma_web" class="github_repositorio" title="Alojado en Github"></a>   
 
     <script type="text/javascript" src="./js/inicio.js"></script>
 </body>
