--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
                 <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: Genera títulos, humorístico, para emprendimientos.</li>
                 <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
                 <li><a href="https://caalma.github.io/color_hexadecimal_3_signos/">Colores en Hexadecimal con 3 signos</a>: Tabla de colores.</li>
+                <li><a href="https://caalma.github.io/tangram_figuras/">Figuras del Tangram Chino</a>: Utilidad para visualizar figuras del Tangram y mostrar sus soluciones.</li>
+                <li><a href="https://github.com/caalma/plantilla_pagina_estatica">Plantilla estática para página web</a>: Base simple para iniciar una web.</li>
+                <li><a href="https://github.com/caalma/sublime-text-package_utiles">Utilidades para Sublime-Text</a>: Extensión con varias funcionalidades.</li>
+
             </ul>
         </nav>
 
     </div>
     <footer>
         <div class="cnt">
-            <p>Actualizado el <b>2021-06-24 00:38:02</b>.</p>
+            <p>Actualizado el <b>2021-07-10 13:57:47</b>.</p>
         </div>
     </footer> 
 
