Ajustes de contenido y librerias.

--- a/404.html
+++ b/404.html
@@ -12,7 +12,8 @@
     <link rel="alternate icon" type="image/png" href="./img/favicon.png">
     <link rel="icon" type="image/svg+xml" href="./img/favicon.svg">
 
-    <link rel="stylesheet" type="text/css" href="./css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
     <div id="pagina">
@@ -21,6 +22,11 @@
         	<p>Disculpa, pero el contenido que buscas no está aquí !</p>
         </header>
     </div>
-    <script type="text/javascript" src="./js/inicio.js"></script>
+    
+    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="./js/js-yaml.min.js"></script>
+    <script type="text/javascript" src="./js/underscore-min.js"></script>
+    <script type="text/javascript" src="./js/functions.js"></script>
+    <script type="text/javascript" src="./js/init.js"></script>
 </body>
 </html>
