--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="alternate icon" type="image/png" href="./img/favicon.png">
     <link rel="icon" type="image/svg+xml" href="./img/favicon.svg">
 
-    <link rel="stylesheet" type="text/css" href="./css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
     <title>CAALMA.ar</title>
 
@@ -22,28 +23,26 @@
         	<p>Web personal y experimental.</p>
         </header>
         <br>
-        <nav>
-            <h4>Cosas a compartir:</h4>
-            <ul>
-                <li><a href="https://caalma.github.io/natalicio-emprendedor/">Natalicio emprendedor</a>: Genera títulos, humorístico, para emprendimientos.</li>
-                <li><a href="https://caalma.github.io/cruza_palabras/">CruzaPalabras</a>: Relaciona, azarozamente, una frase con las palabras de la base de datos.</li>
-                <li><a href="https://caalma.github.io/color_hexadecimal_3_signos/">Colores en Hexadecimal con 3 signos</a>: Tabla de colores.</li>
-                <li><a href="https://caalma.github.io/tangram_figuras/">Figuras del Tangram Chino</a>: Utilidad para visualizar figuras del Tangram y mostrar sus soluciones.</li>
-                <li><a href="https://github.com/caalma/plantilla_pagina_estatica">Plantilla estática para página web</a>: Base simple para iniciar una web.</li>
-                <li><a href="https://github.com/caalma/sublime-text-package_utiles">Utilidades para Sublime-Text</a>: Extensión con varias funcionalidades.</li>
 
-            </ul>
-        </nav>
-
+        <section id="content"></section>
     </div>
+
     <footer>
         <div class="cnt">
-            <p>Actualizado el <b>2021-07-10 13:57:47</b>.</p>
+            <p>Actualizado el <b id="update"></b>.</p>
         </div>
     </footer> 
 
     <a href="https://github.com/caalma/caalma_web" class="github_repositorio" title="Alojado en Github"></a>   
 
-    <script type="text/javascript" src="./js/inicio.js"></script>
+    <button id="exit">Salir</button>
+
+
+    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="./js/marked.min.js"></script>
+    <script type="text/javascript" src="./js/js-yaml.min.js"></script>
+    <script type="text/javascript" src="./js/underscore-min.js"></script>
+    <script type="text/javascript" src="./js/functions.js"></script>
+    <script type="text/javascript" src="./js/init.js"></script>
 </body>
 </html>
