--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" class="error">
+<html lang="es" id="error">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -24,6 +24,7 @@
     </div>
     
     <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="./js/marked.min.js"></script>
     <script type="text/javascript" src="./js/js-yaml.min.js"></script>
     <script type="text/javascript" src="./js/underscore-min.js"></script>
     <script type="text/javascript" src="./js/functions.js"></script>
