--- a/ir/index.html
+++ b/ir/index.html
@@ -5,18 +5,21 @@
          const lugares = {
              '_': '/',
              'm0': 'https://github.com/caalma/p_matem_nc',
-             'pmnc': 'https://github.com/caalma/p_matem_nc',
+             'matematica': 'https://github.com/caalma/p_matem_nc',
+             'audibles': 'https://github.com/caalma/audibles',
+             'lc': 'https://github.com/caalma/curso_ptav_estuary',
          }
-
         </script>
+
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <meta name="HandheldFriendly" content="True"/>
         <meta http-equiv="cleartype" content="on"/>
 
-        <link rel="alternate icon" type="image/png" href="../img/favicon.png">
-        <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
+        <link rel="alternate icon" type="image/png" href="/img/favicon.png">
+        <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
 
         <title>caalma.ar - redireccionador</title>
         <style>
