--- a/ir/index.html
+++ b/ir/index.html
@@ -18,6 +18,13 @@
         <meta name="HandheldFriendly" content="True"/>
         <meta http-equiv="cleartype" content="on"/>
 
+        <meta http-equiv="cache-control" content="max-age=0" />
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <meta http-equiv="Cache-Control" content="no-store" />
+
         <link rel="alternate icon" type="image/png" href="/img/favicon.png">
         <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
 
