--- a/ir/index.html
+++ b/ir/index.html
@@ -4,8 +4,11 @@
         <script>
          const lugares = {
              '_': '/',
+             // matemáticas
              'm0': 'https://github.com/caalma/p_matem_nc',
-             'matematica': 'https://github.com/caalma/p_matem_nc',
+             'm1': 'https://github.com/caalma/p_matem_nc/blob/main/documentos/ensennar_matematica_en_diferentes_contextos_institucionales_disciplinares_y_profesionales___marcel_david_pochulu__conversaciones_ensennanza_aa.pdf',
+
+             // livecoding
              'audibles': 'https://github.com/caalma/audibles',
              'lc': 'https://github.com/caalma/curso_ptav_estuary',
          }
