--- a/ir/index.html
+++ b/ir/index.html
@@ -5,8 +5,8 @@
          const lugares = {
              '_': '/',
              // matemáticas
-             'm0': 'https://github.com/caalma/p_matem_nc',
-             'm1': 'https://github.com/caalma/p_matem_nc/blob/main/documentos/ensennar_matematica_en_diferentes_contextos_institucionales_disciplinares_y_profesionales___marcel_david_pochulu__conversaciones_ensennanza_aa.pdf',
+             'm0': 'https://github.com/caalma/p_matematica_nc',
+             'm1': 'https://github.com/caalma/p_matematica_nc/blob/main/documentos/ensennar_matematica_en_diferentes_contextos_institucionales_disciplinares_y_profesionales___marcel_david_pochulu__conversaciones_ensennanza_aa.pdf',
 
              // livecoding
              'audibles': 'https://github.com/caalma/audibles',
@@ -33,6 +33,7 @@
 
         <title>caalma.ar - redireccionador</title>
         <style>
+         @import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;700&display=swap');
          * { font-family:'Asap', serif; }
          html { width:100vw; }
          body {
