--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="HandheldFriendly" content="True"/>
     <meta http-equiv="cleartype" content="on"/>
-    
+
     <link rel="alternate icon" type="image/png" href="./img/favicon.png">
     <link rel="icon" type="image/svg+xml" href="./img/favicon.svg">
 
     <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    
+
     <title>caalma.ar</title>
 
 </head>
@@ -20,7 +20,7 @@
     <div id="pagina">
         <header>
         	<img src="./img/favicon.svg">
-        	<p>Web personal y experimental.</p>
+        	<p>Web experimental y personal.</p>
         </header>
         <br>
 
@@ -32,9 +32,9 @@
         <div class="cnt">
             <p>Actualizado el <b id="update"></b>.</p>
         </div>
-    </footer> 
+    </footer>
 
-    <a href="https://github.com/caalma/caalma_web" class="github_repositorio" title="Alojado en Github"></a>   
+    <a href="https://github.com/caalma/caalma_web" class="github_repositorio" title="Alojado en Github"></a>
 
     <button id="exit">Salir</button>
 
