--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="pagina">
         <header>
         	<img src="./img/favicon.svg">
-        	<p>Web experimental y personal.</p>
+        	<p>Web personal de <i>Carlos Alberto Macheratti</i>.</p>
         </header>
         <br>
 
