--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="HandheldFriendly" content="True"/>
     <meta http-equiv="cleartype" content="on"/>
 
-    <title>CAALMA</title>
+    <title>caalma.net.ar - error 404</title>
 
     <link rel="alternate icon" type="image/png" href="/img/favicon.png">
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
