--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-    <title>caalma.ar</title>
+    <title>caalma.net.ar</title>
 
 </head>
 <body>
