--- a/404.html
+++ b/404.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="es" id="error">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="HandheldFriendly" content="True"/>
-    <meta http-equiv="cleartype" content="on"/>
+    <head>
+        <meta charset="utf-8">
 
-    <title>caalma.net.ar - error 404</title>
+        <meta content="ie=edge" http-equiv="x-ua-compatible">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta content="true" name="HandheldFriendly">
+        <meta content="width" name="MobileOptimized">
+        <meta content="on" http-equiv="cleartype">
 
-    <link rel="alternate icon" type="image/png" href="/img/favicon.png">
-    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
+        <title>caalma.net.ar</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
-<body>
-    <div id="pagina">
-        <header>
-        	<img src="./img/404.svg">
-        	<p>Disculpa, pero el contenido que buscas no está aquí !</p>
-        </header>
-    </div>
-</body>
+        <meta content="Caalma : Carlos Alberto Macheratti - Portfolio. Experimentaciones, diseño gráfico, programación, matemáticas. Argentina" name="description">
+        <meta content="index, follow" name="robots">
+
+        <meta property="og:title" content="Caalma">
+        <meta property="og:site_name" content="Caalma">
+        <meta property="og:description" content="Caalma : Carlos Alberto Macheratti - Portfolio. Experimentaciones, diseño gráfico, programación, matemáticas. Argentina">
+        <meta property="og:locale" content="es_ES">
+        <meta property="og:image" content="/img/caalma_compartir.png">
+        <meta property="og:image:alt" content="Caalma : Carlos Alberto Macheratti - Portfolio">
+
+        <link rel="canonical" href="https://caalma.net.ar/">
+        <link rel="image_src" href="/img/caalma_compartir.png">
+
+
+        <link rel="alternate icon" type="image/png" href="/img/favicon.png">
+        <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
+
+        <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
+    </head>
+    <body>
+        <div id="pagina">
+            <header>
+        	    <img src="./img/404.svg">
+        	    <p>Disculpa, pero el contenido que buscas no está aquí !</p>
+            </header>
+        </div>
+    </body>
 </html>
