secure image_share

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <meta property="og:site_name" content="Caalma">
         <meta property="og:description" content="Caalma : Carlos Alberto Macheratti - Portfolio. Experimentaciones, diseño gráfico, programación, matemáticas. Argentina">
         <meta property="og:locale" content="es_ES">
-        <meta property="og:image" content="/img/caalma_compartir.png">
+        <meta property="og:image" content="https://caalma.net.ar/img/caalma_compartir.png">
+        <meta property="og:image:secure_url" content="https://caalma.net.ar/img/caalma_compartir.png">
+        <
         <meta property="og:image:alt" content="Caalma : Carlos Alberto Macheratti - Portfolio">
 
         <link rel="canonical" href="https://caalma.net.ar/">
