--- a/o/+1+/index.html
+++ b/o/+1+/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Drag and Drop Controls</title>
+        <meta name="author" content="caalma. Carlos Alberto Macheratti">
+        <title>...+1+...</title>
+
         <link rel="stylesheet" href="./lib/style.css">
     </head>
     <body>
