--- a/d/livecoding/index.html
+++ b/d/livecoding/index.html
@@ -13,6 +13,16 @@
 
         <br>
 
-        <p class="verde">(en muy breve)</p>
+        <p class="verde">(En muy breve <span class="naranja">[posiblemente mañana]</span> habrá más datos aquí.)</p>
+
+        <br>
+
+        <h2>Espacios de exploración</h2>
+        <ul>
+            <li><a href="https://hydra.ojack.xyz/" target="_blank">Hydra</a></li>
+            <li><a href="https://strudel.cc/" target="_blank">Strudel</a></li>
+            <li><a href="https://chasyxx.github.io/EnBeat_NEW/" target="_blank">Bytebeat</a></li>
+        </ul>
+
     </body>
 </html>
